switched from LinkedList to ArrayList, related to JBXB-65
git-svn-id: https://anonsvn.jboss.org/repos/common/trunk@1828 15291643-af16-0410-b526-a589213603f9